# flite

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  flite_cli.c
lang/: CMakeLists.txt
lang/cmu_grapheme_lang/: CMakeLists.txt
lang/cmu_grapheme_lex/: CMakeLists.txt
lang/cmu_indic_lang/: CMakeLists.txt
lang/cmu_indic_lex/: CMakeLists.txt
lang/cmu_time_awb/: CMakeLists.txt
lang/cmu_us_awb/: CMakeLists.txt
lang/cmu_us_kal/: CMakeLists.txt
lang/cmu_us_kal16/: CMakeLists.txt
lang/cmu_us_rms/: CMakeLists.txt
lang/cmu_us_slt/: CMakeLists.txt  cmu_us_slt.c
lang/cmulex/: CMakeLists.txt
lang/usenglish/: CMakeLists.txt
main/: CMakeLists.txt  flite_main.c
src/: CMakeLists.txt  flite_version.h.in
src/audio/: CMakeLists.txt
src/cg/: CMakeLists.txt
src/hrg/: CMakeLists.txt
src/lexicon/: CMakeLists.txt
src/regex/: CMakeLists.txt
src/speech/: CMakeLists.txt
src/stats/: CMakeLists.txt
src/synth/: CMakeLists.txt
src/utils/: CMakeLists.txt
src/wavesynth/: CMakeLists.txt
tools/: flite_voice_list.c
tools/c/: cmu_iq_lex_data_compressed.c
